--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
+
 {
-  "name": "hygiène---la-oncé",
+  "name": "la-once-haccp",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "@google/genai": "^1.35.0",
     "lucide-react": "^0.562.0",
     "jspdf": "^2.5.1",
@@ -18,9 +19,8 @@
     "@supabase/supabase-js": "^2.45.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.5"
   }
 }
